# netspeedmeter

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  filetree.txt  netspeedmeter.rc
src/: SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/config/: AppConfig.h  ConfigManager.cpp  ConfigManager.h
src/core/: NetworkPoller.cpp  NetworkPoller.h  SpeedSample.h
src/ui/: SettingsDialog.cpp  SettingsDialog.h  SpeedWidget.cpp  SpeedWidget.h  TrayManager.cpp  TrayManager.h
